feat:HU1 y Hu2 completed